# skytest

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
etc/: skytest.conf.template  skytest.template.conf  skytest.template.toml  skytest.toml
patches/: apply.sh  fix-server-create-with-bdmv2.diff
release/: Dockerfile  build-with-docker.sh  skytest-0.1.0-py3-none-any.whl  skytest.template.toml
skytest/cases/: base.py  ecs_actions.py  scenario.py  vm_actions.py
skytest/cmd/: ecs_test.py  vm_test.py
skytest/common/: conf.py  exceptions.py  libvirt_guest.py  log.py  model.py  tear_down.py  utils.py
skytest/managers/: base.py
skytest/managers/openstack/: client.py  manager.py
src/skytest/cases/: base.py  ecs_actions.py  scenario.py
src/skytest/cmd/: ecs_test.py
src/skytest/common/: conf.py  constants.py  exceptions.py  libvirt_guest.py  log.py  model.py  utils.py
src/skytest/managers/: base.py
src/skytest/managers/openstack/: client.py  manager.py
