[project]
name = "skytest"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BytemanD", email = "byteman.e@outlook.com"},
]
dependencies = [
    "wheel",
    "click",
    "loguru",
    "retry",
    "toml",
    "prettytable",
    "libvirt-python",
    "python-novaclient",
    "python-glanceclient",
    "python-neutronclient",
    "python-cinderclient",
    "python-keystoneclient",
    "easy2use @ https://github.com/BytemanD/easy-to-use/releases/download/dev/easy2use-1.0.6.dev12-py3-none-any.whl"
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
skytest-ecs = "skytest.cmd.ecs_test:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
